--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
   "name": "ui-library-tian",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "main": "build/index.js",
   "module": "build/index.esm.js",
   "files": [
     "build"
   ],
-  "types": "build/index.d.ts",
+  "types": "build/types/index.d.ts",
   "peerDependencies": {
+    "@testing-library/dom": "^9.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/colormap": "^2.3.1",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.13",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "colormap": "^2.3.2",
+    "lodash": "^4.17.21",
+    "pixi.js-legacy": "^7.1.3",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0",
-    "typescript": ">=4.9.5"
+    "react-scripts": "5.0.1",
+    "sass": "^1.58.3",
+    "typescript": ">=4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "dependencies": {
     "@testing-library/dom": "^9.0.0",
