--- a/package.json
+++ b/package.json
@@ -10,23 +10,27 @@
   "peerDependencies": {
     "colormap": "^2.3.2",
     "lodash": "^4.17.21",
+    "pixi.js": "^7.2.0-beta",
+    "pixi.js-legacy": "^7.2.0-beta",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0",
     "sass": "^1.58.3",
-    "typescript": ">=4.9.5",
-    "pixi.js": "^7.2.0-beta",
-    "pixi.js-legacy": "^7.2.0-beta"
+    "typescript": ">=4.9.5"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/colormap": "^2.3.1",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^16.18.13",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
+    "antd": "^5.6.0",
     "colormap": "^2.3.2",
     "lodash": "^4.17.21",
     "pixi.js": "^7.2.0-beta",
@@ -36,6 +40,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
     "typescript": ">=4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -43,21 +48,21 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/node-logger": "^6.5.16",
-    "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.0.18",
+    "@storybook/addon-essentials": "^7.0.18",
+    "@storybook/addon-interactions": "^7.0.18",
+    "@storybook/addon-links": "^7.0.18",
+    "@storybook/node-logger": "^7.0.18",
+    "@storybook/preset-create-react-app": "^7.0.18",
+    "@storybook/react": "^7.0.18",
+    "@storybook/react-webpack5": "^7.0.18",
+    "@storybook/testing-library": "^0.1.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.34.1",
+    "storybook": "^7.0.18",
     "webpack": "^5.75.0"
   },
   "scripts": {
@@ -65,8 +70,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
+    "storybook": "storybook dev -p 6006 -s public",
+    "build-storybook": "storybook build -s public",
     "rollup-build": "rimraf build/* && rollup -c"
   },
   "eslintConfig": {
