--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.1",
     "antd": "^5.6.0",
+    "classnames": "^2.3.2",
     "colormap": "^2.3.2",
     "lodash": "^4.17.21",
     "pixi.js": "^7.2.0-beta",
