--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "antd": "^5.6.0",
     "classnames": "^2.3.2",
     "colormap": "^2.3.2",
+    "immer": "^10.0.2",
     "lodash": "^4.17.21",
     "pixi.js": "^7.2.0-beta",
     "pixi.js-legacy": "^7.2.0-beta",
@@ -41,6 +42,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
     "typescript": ">=4.9.5",
+    "use-immer": "^0.9.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
